# ProgramowanieGrafiki

./: README.md
2D-Shapes/: OpenGL_handler.java  Quad.java  ReadMe.txt  Triangle.java  Two_Dim_Shapes.java
2D-Shapes/BUILDS/dist-macosx-universal/: README.TXT
3D-KeybordControl/: Cube.java  Keyboard_Control.java  Keyboard_controler.java  MouseController.java  OpenGL_handler.java  Pyramid.java
3D-Light/: Cube.java  OpenGL_handler.java  Three_Dim_Light.java
3D-Shapes/: Cube.java  OpenGL_handler.java  Pyramid.java  Three_Dim_Shapes.java
3D-Shapes/BUILDS/dist-linux-i586/: README.TXT
3D-Textures/: Cube.java  OpenGL_handler.java  Three_Dim_Textures.java
3D-Textures/BUILDS/dist-macosx-universal/: README.TXT
PROGRAMOWANIE_GRAFIKI_CPP/: CMakeLists.txt
PROGRAMOWANIE_GRAFIKI_CPP/zadanie1_ksztalty/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  zadanie1_ksztalty.cpp
PROGRAMOWANIE_GRAFIKI_CPP/zadanie2_klawiatura/: SimpleVertexShader.vertexshader  zadanie2_klawiatura.cpp
PROGRAMOWANIE_GRAFIKI_CPP/zadanie3_textura/: SimpleVertexShader.vertexshader  zadanie3_textura.cpp
PROGRAMOWANIE_GRAFIKI_CPP/zadanie4_wczytywanie/: zadanie4_wczytywanie.cpp
PROGRAMOWANIE_GRAFIKI_CPP/zadanie5_swiatlo/: zadanie5_swiatlo.cpp
PROGRAMOWANIE_GRAFIKI_CPP/zadanie6_licznik/: SimpleFragmentShader.fragmentshader  zadanie6_licznik.cpp
